Refactor/use lambdas (#2114)
* refactor: Use lambdas

Co-authored-by: Moderne <team@moderne.io>

* One revert & one fix on automated changes

https://github.com/moderneinc/support-public/issues/33

* Apply spotless

* Fix architecture tests

* Replace FluentIterable with Streams

* Skip start

* Apply spotless

---------

Co-authored-by: Moderne <team@moderne.io>